# cpp-hello-gtest

./: .gitignore
proj1/: Readme.md  build.sh  conanfile.txt  meson.build
proj1/src/: HelloTest.cpp  hello.cpp
proj2/: CMakeLists.txt  conanfile.txt
proj2/include/: gcd.hpp
proj2/src/: gcd.cpp  main.cpp
